# serde-split

./: Cargo.toml  README.md
src/: lib.rs
