[package]
name = "serde-split"
version = "0.1.1"
edition = "2021"
authors = ["blu-dev <the.blu.dev@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Derive two implementations of serde traits for different purposes"
repository = "https://github.com/blu-dev/serde-split"
keywords = ["serde", "serialization", "deserializaion", "bincode", "json"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro-crate = "1.3.1"
proc-macro2 = "1.0.67"
quote = "1.0.33"
syn = "2.0.37"

[lib]
proc-macro = true
